fixed references and Introduction background

--- a/Methods/HOBD.tex
+++ b/Methods/HOBD.tex
@@ -10,7 +10,8 @@
 \usepackage{enumitem,kantlipsum}
 \usepackage{float}
 \usepackage{titlesec}
-
+\usepackage{natbib}
+\usepackage{apalike}
 \setcounter{secnumdepth}{4}
 
 \titleformat{\paragraph}
@@ -86,17 +87,19 @@ Finally, I must express my very profound gratitude to my parents for providing m
 \pagenumbering{arabic}
 
 \section{Introduction}
-Human beings have an insatiable desire to understand, not only the things around us, but also ourselves. Why do we behave and respond the way we do \cite{hasson2012}? How do we learn and adapt \cite{hasson2004}\cite{hasson2005}? What do we believe or value \cite{Greene01}? These questions have mesmerized wise men for thousands of years, and the answers continue to evade us. For many of us, the key to understanding human behavior lies in our brain, the central hub of all our thoughts and decision making. So, when a new technology emerged allowing us to study the brain in a quantitative manner, it opened countless doors of opportunities for those who possessed an aptitude for quantitative analysis and a hunger to learn more about our own identity.
+Human beings have an insatiable desire to understand, not only the things around us, but also ourselves. Why do we behave and respond the way we do \citep{hasson2012}? How do we learn and adapt \citep{hasson2004}\citep{hasson2005}? What do we believe or value \citep{Greene01}? How does social context affect the way we think \citep{Matthew2015}? These questions have mesmerized wise men for thousands of years, and the answers continue to evade us. For many of us, the key to understanding human behavior lies in our brain, the central hub of all our thoughts and decision making. So, when a new technology emerged allowing us to study the brain in a quantitative manner, it opened countless doors of opportunities for those who possessed an aptitude for quantitative analysis and a hunger to learn more about our own identity.
 
-Functional Magnetic Resonance Imaging, often referred to as fMRI, was first discovered and applied as a brain mapping method in 1990 by Seiji Ogawa \cite{Ogawa90}. Since then, this technology quickly popularized among Brain Science related research due to its unprecedented low health risk to subjects and its ability to accurately translate brain activities into highly-structured quantitative data \cite{Logothetis01}. Once the highly abstract brain activities are converted into signs and digits, exploring patterns in the brain simply devolves into highly intricate mathematical problems. For example, by treating each brain fMRI image as a feature vector, Machine Learning algorithms can learn to identify cognitive patterns from a subset of the data (e.g. which part of a movie someone is watching), and be used to extract similar information from the other brain images \cite{Norman06}\cite{peterson12}\cite{peterson17}. These applications typically treat each brain image in isolation, and attempt to decode patterns of activity associated with each of several candidate brain states. However, important activities in fMRI data are often obscured by noises created by the environment, human error, random neural activity, etc \cite{peterson11}, thus limiting the effectiveness of any decoding effort. To address this issue, new branches of research has been emerging that specifically focuses on the extraction of useful information from noisy brain fMRI data by treating brain fMRI images as time series of dynamic activities, and one of the most fruitful directions involves analyzing functional connectivities within the brain \cite{peterson9} \cite{peterson19} \cite{peterson20}.
+Functional Magnetic Resonance Imaging, often referred to as fMRI, was first discovered and applied as a brain mapping method in 1990 by Seiji Ogawa \citep{Ogawa90}. Since then, this technology quickly popularized among Brain Science related research due to its unprecedented low health risk to subjects and its ability to accurately translate brain activities into highly-structured quantitative data \citep{Logothetis01}. Once the highly abstract brain activities are converted into signs and digits, exploring patterns in the brain simply devolves into highly intricate mathematical problems. For example, by treating each brain fMRI image as a feature vector, Machine Learning algorithms trained on a subset of the data can learn to identify cognitive patterns (e.g. which part of a movie someone is watching), and be used to extract similar patterns from held-out brain images \citep{Norman06}\citep{peterson12}\citep{peterson17}. These applications typically treat each brain image in isolation, and attempt to decode patterns of activities associated with each of several candidate brain states. However, important stimulus-driven activities in fMRI data are often obscured by noises created by non stimulus-driven neural activity \citep{peterson11}, thus limiting the effectiveness of any decoding effort. To address this issue, new branches of research have been emerging that specifically focus on the extraction of useful information from noisy brain fMRI data by treating brain fMRI images as time series of dynamic activities, and one of the most fruitful directions involves analyzing functional connectivities within the brain \citep{peterson19} \citep{peterson20}.
 
-The brain can be divided in various ways---according different rules of systemization (by functionality, organization, activity patterns, etc)---into a set of regions, and functional connectivity describes the dynamic correlations between the time series of activations each pair of brain regions exhibits. When we observe the brain, the neural activities can appear incredibly complex. But the mechanics of brain are far from random, rather, the dynamic patterns of the activities our brains exhibit are highly structured. Presumably this mirrors the complex but highly structured nature of our internal thoughts and experiences. Recent research efforts have revealed that important cognitive information is contained in the dynamic correlational structure of brain activities \cite{davidson2016}, and as a result, approaches focusing on understanding the brain through analysis of brain functional connectivities begun to rapidly emerge. When analyzing the brain functional connectivity of one experimental subject in isolation, one can examine how (or whether) the correlational structure of these activity patterns (across a given set of brain regions) varies according to the cognitive task the subject is performing \cite{Turke13}\cite{Rubinov2010}\cite{peterson10}. Alternatively, the inter-subject functional correlation (ISFC) analyses analyzes the functionally connectivities across multiple subjects to isolate stimulus-dependent inter-regional correlations from random neural activities and non-neuronal noise \cite{hasson2016}\cite{jeremy2017}.
+The brain can be divided in various ways---according different rules of systemization (by functionality, organization, activity patterns, etc)---into a set of regions, and functional connectivity describes the correlation between the time series of activations each pair of brain regions exhibits. When we observe the brain, the neural activities can appear incredibly complex. But the mechanics of brain are far from random, rather, the dynamic patterns of the activities our brains exhibit are highly structured. Presumably, this mirrors the complex but highly structured nature of our internal thoughts and experiences. Many past studies on functional connectivity have focused on using resting state data (images taken as participants rest in the scanner with their eyes open) to estimate a single correlation matrix for each person \citep{peterson9}. Each subject's correlation matrix provide a rich database for mapping the relations among brain processes and their contributions to perception, action and cognition \citep{Bassett2017}. These cognitive information were then used as identifiers to relate and compare patterns in subjects' brain activities to patterns in subjects' behaviors on various tasks \citep{Turke13}\citep{Rubinov2010}\citep{peterson10}.
 
-Over the past decade, functional connectivity analyses of brain data has evolved significantly \cite{olaf2005}\cite{khambhati2017}. However, there are three fundamental limitations to past approaches:
+Recent research efforts have revealed that important cognitive information is contained in the temporal correlational structure of time series brain activities \citep{davidson2016}, and as a result, approaches focusing on understanding the brain through analysis of dynamic brain functional connectivities begun to rapidly emerge \citep{Nigam2016}\citep{Hutchinson2013}. One of the most significant advancements comes from a recent paper by Uri Hasson's group, which casts functional connectivity as a dynamic process that changes from moment to moment depending on the specific experience of that moment \citep{hasson2016}. When analyzing the brain functional connectivity of one experimental subject in isolation, one can examine how (or whether) the correlational structure of these activity patterns (across a given set of brain regions) varies according to the cognitive task the subject is performing. The paper also presents the revolutionary idea of inter-subject functional correlation (ISFC) analyses, which analyzes the functionally connectivities across multiple subjects to isolate stimulus-dependent inter-regional correlations from random neural activities and non-neuronal noise. Dynamic functional connectivity and ISFC analysis were successfully applied by the Contextual Dynamics Lab in their most recent paper on hierarchical topographic factor analysis (HTFA) in brain decoding tasks. The HTFA also discovered that high-order functional connectivity patterns and basic brain activation patterns contain partially non-overlapping information about stimulus-driven brain dynamics, which was the main inspiration for the investigations behind this thesis \citep{jeremy2017}.
 
-Firstly, \textbf{correlation matrices are not scalable.} Examining pairwise correlation in brain data containing $n$ regions (henceforth interchangeable with ``voxels") produces a correlation matrix with $n^2$ entries. When n is large (e.g. the number of brain regions in an fMRI volume), the full correlation matrix can become unwieldy to compute with \cite{Rubinov2010}\cite{Betzel2017}\cite{Craddock2012}\cite{Yeo2011}. Furthermore, if one wishes to examine higher-order patterns (e.g. how correlations between correlations change over time), the storage requirements of the resulting patterns increase exponentially.
+Although functional connectivity analyses of brain data has evolved significantly \citep{olaf2005}\citep{khambhati2017}, there are still three fundamental limitations to past approaches:
 
-Secondly, \textbf{the sliding window approach is not well suited to the study of dynamic activity.} Most approaches to calculating functional connectivity uses the sliding window method, where the correlation function is applied on the brain activations of time points within a window of set length to calculate the functional connectivity at the central time point. To calculate functional connectivity of following time points, the window is shift forward one time point at a time until the edge of the window reaches the end of the time series \cite{enrico2011}\cite{elena2012}. One disadvantage of the sliding window approach is that, for a time series of length $t$ and a window length of $l$, it can only retrieve the functional connectivity of $n=t-l$ time point, thereby losing information on $l$ time points. Although many practical applications use buffers to make up for the loss, repeated application of the sliding window approach on the same dataset—--e.g. calculating the correlation of the correlation between nodes—--is impractical. In addition, the sliding window approach provides only a poor approximation of the moment-by-moment patterns at the heart of these representations.
+Firstly, \textbf{correlation matrices are not scalable.} Examining pairwise correlation in brain data containing $n$ regions (henceforth interchangeable with ``voxels") produces a correlation matrix with $n^2$ entries. When n is large (e.g. the number of brain regions in an fMRI volume), the full correlation matrix can become unwieldy to compute with \citep{Rubinov2010}\citep{Betzel2017}\citep{Craddock2012}\citep{Yeo2011}. Furthermore, if one wishes to examine higher-order patterns (e.g. how correlations between correlations change over time), the storage requirements of the resulting patterns increase exponentially.
+
+Secondly, \textbf{the sliding window approach is not well suited to the study of dynamic activity.} Most approaches to calculating functional connectivity uses the sliding window method, where the correlation function is applied on the brain activations of time points within a window of set length to calculate the functional connectivity at the central time point. To calculate functional connectivity of following time points, the window is shift forward one time point at a time until the edge of the window reaches the end of the time series \citep{enrico2011}\citep{elena2012}. One disadvantage of the sliding window approach is that, for a time series of length $t$ and a window length of $l$, it can only retrieve the functional connectivity of $n=t-l$ time point, thereby losing information on $l$ time points. Although many practical applications use buffers to make up for the loss, repeated application of the sliding window approach on the same dataset—--e.g. calculating the correlation of the correlation between nodes—--is impractical. In addition, the sliding window approach provides only a poor approximation of the moment-by-moment patterns at the heart of these representations.
 
 Lastly, \textbf{important information may exist beyond voxel activations and their first level functional connectivity.} The brain is a network of seemingly autonomous nodes that are actually intricately interconnected. Useful information about the brain may exist within interactions between interactions between brain regions (2nd order functional connectivity), interactions between interactions between interactions (3rd order functional connectivity), or in even higher orders of functional connectivity. To fully grasp the functions of a single brain region in the network, it is crucial to understand of its activities relative to the richly woven network that supports it. Therefore, incorporating information from higher order dynamics could potentially improve the quality of brain analysis.
 
@@ -157,7 +160,7 @@ In contrast to the sliding window method, which is widely considered to be the g
 
 \subsection{TimeCorr Inter-Subject Functional Connectivity}
 
-Inter-Subject Functional Connectivity (ISFC) is the functional connectivity between brain regions of different subjects \cite{jeremy2017}\cite{hasson2016}. The patterns recovered by ISFC is analogous to single subject functional connectivity (which reflect the correlational structure across brain regions within an individual's
+Inter-Subject Functional Connectivity (ISFC) is the functional connectivity between brain regions of different subjects \citep{jeremy2017}\citep{hasson2016}. The patterns recovered by ISFC is analogous to single subject functional connectivity (which reflect the correlational structure across brain regions within an individual's
 brain), but they should reflect only activities that are specifically stimulus-driven. For every subject, we compare its brain activations time sequence $a_i$ with the average activations of all other subjects $a_{-i}$. Through the process of averaging the activations of multiple subject, we dampen random noises and emphasize activities that are common across all subjects, which are usually stimulus-dependent. Therefore, when we calculate the functional connectivity matrix between subject activation $a_i$ and the average response from the rest of the participants $a_{-i}$, the functional connectivity we calculate are more likely to reflect activities that are stimulus-driven.
 
 Furthermore, after we obtain the functional connectivity matrix between each subject and the average of their counterparts, we use Fisher Z-transformation to average the results from all the subjects. In addition to the noise-dampening and stimulus-enhancing effects that comes with averaging, we are also able to gain an unbiased view of the overall stimulus-driven functional connectivity patterns across all subjects within our analysis. Fisher Z-transformation is applied in the averaging process as a means to stabilize and reduce approximation variance and return a less biased result than that of directly averaging correlations.
@@ -232,7 +235,7 @@ Given a brain activation matrix or a $n^{th}$ order functional connectivity matr
 By concatenating the functional connectivity of all subjects into a single matrix before PCA reduction, we guarantee consistency in the orientation of principal components in the reduced functional connectivity matrix across all subjects. As a result, although the original voxel order is disrupted in the reduction process, we are able to maintain activation alignment across subjects and preserve an effective representation of the dynamic correlation structure.
 
 \subsection{Multi-Subject Decoding Analysis with TimeCorr ISFC}
-The Multi-Subject Decoding Analysis is a method designed to find stimulus-dependent activations in an fMRI dataset by cross referencing data from multiple subjects \cite{jeremy2017}. Through application of Multi-Subject TimeCorr ISFC on two equal divisions of the subject data, ``white noises" (background noise, human error, random neural activity, etc) are dampened and activities that are common across subjects are emphasized, thereby increasing the salience of patterns that reflect activities that are only stimulus-driven. Additionally, when the correlation between the same time point in both sub-groups is high, it indicates that the average brain activities in one group demonstrates very high similarity with the average brain activities of all subjects in the other group at that time point. When the brain activities of multiple subjects display high similarity for certain time points in their brain activations time sequence, then intuitively there's a high probability that their brain responses for those time points are uniformly caused by their common stimulus. Using this logic, the decoding accuracy of the dataset---the percentage of time points that demonstrates highest correlation with themselves across two sub-divisions of the dataset---gives an accurate representation of
+The Multi-Subject Decoding Analysis is a method designed to find stimulus-dependent activations in an fMRI dataset by cross referencing data from multiple subjects \citep{jeremy2017}. Through application of Multi-Subject TimeCorr ISFC on two equal divisions of the subject data, non stimulus-driven neural activities are dampened and activities that are common across subjects are emphasized, thereby increasing the salience of patterns that reflect activities that are only stimulus-driven. Additionally, when the correlation between the same time point in both sub-groups is high, it indicates that the average brain activities in one group demonstrates very high similarity with the average brain activities of all subjects in the other group at that time point. When the brain activities of multiple subjects display high similarity for certain time points in their brain activations time sequence, then intuitively there's a high probability that their brain responses for those time points are uniformly caused by their common stimulus. Using this logic, the decoding accuracy of the dataset---the percentage of time points that demonstrates highest correlation with themselves across two sub-divisions of the dataset---gives an accurate representation of
 
 \begin{enumerate}
 \item Similarity between subject responses throughout the fMRI simulation
@@ -364,7 +367,7 @@ Lastly, to demonstrate TimeCorr's advantage over the sliding window approach gen
 
 
 \subsection{Testing Inter-Subject Functional Connectivity using TimeCorr}
-Confident with the TimeCorr approach's ability to recover the dynamic correlation structures of single subject datasets, we proceeded to test TimeCorr's performance in recovering inter-subject functional connectivity in multi-subject synthetic datasets. In practical scenarios, fMRI datasets always contain a significant amount of noise from the environment, human error, random neural activity, etc in addition to stimulus-driven brain activities. Therefore, to simulate realistic human brain activities, we added different levels of random noise to the synthetic datasets to gauge the robustness of TimeCorr ISFC in recovering stimulus-related functional connectivity. The noise levels we experimented with were on the order of magnitudes of $10\%$ (0.1), $100\%$(1), $1000\%$(10) and $10000\%$(100) of the average activation magnitude. Running TimeCorr with Gaussian variance of 1000 time points and a sliding window setup with a window length of 25 time point on 100 ramping datasets, each containing 300 time points, we obtained the results displayed in Figure \ref{fig:t300slide25var1000}.
+Confident with the TimeCorr approach's ability to recover the dynamic correlation structures of single subject datasets, we proceeded to test TimeCorr's performance in recovering inter-subject functional connectivity in multi-subject synthetic datasets. In practical scenarios, fMRI datasets always contain a significant amount of noise from non stimulus-driven neural activities. Therefore, to simulate realistic human brain activities, we added different levels of random noise to the synthetic datasets to gauge the robustness of TimeCorr ISFC in recovering stimulus-related functional connectivity. The noise levels we experimented with were on the order of magnitudes of $10\%$ (0.1), $100\%$(1), $1000\%$(10) and $10000\%$(100) of the average activation magnitude. Running TimeCorr with Gaussian variance of 1000 time points and a sliding window setup with a window length of 25 time point on 100 ramping datasets, each containing 300 time points, we obtained the results displayed in Figure \ref{fig:t300slide25var1000}.
 
 \begin{figure}[!htb]
 \caption{Testing on 100 time point ramping dataset}
@@ -385,13 +388,13 @@ Three different datasets were used for this analysis: Sherlock, Pieman, and Forr
 
 \subsubsection{Description for the Pieman Dataset}
 
-The stimuli for this experiment were derived from a 7 minute recording of the ``Pie Man" story by Jim O'Grady. The experiment was conducted on native English speakers with normal hearing, and was divided into four testing conditions: 36 subjects listened to the story from beginning to end, and were labelled as the ``intact" group; 18 subjects listened to a version of the story where the paragraphs were scrambled randomly, and were labelled as the ``paragraph" group; 36 subjects listened to a version of the story where the words were scrambled randomly, and were labelled as the ``word" group; lastly, 36 subjects did not listen to anything and stayed in resting state throughout the experiment, and were labelled as the ``resting" group. 12 seconds of neutral music and 3 seconds of silence preceded and 15 seconds of silence followed each playback in all conditions. The data from music and silence periods were discarded from all analyses.\cite{hasson2016}
+The stimuli for this experiment were derived from a 7 minute recording of the ``Pie Man" story by Jim O'Grady. The experiment was conducted on native English speakers with normal hearing, and was divided into four testing conditions: 36 subjects listened to the story from beginning to end, and were labelled as the ``intact" group; 18 subjects listened to a version of the story where the paragraphs were scrambled randomly, and were labelled as the ``paragraph" group; 36 subjects listened to a version of the story where the words were scrambled randomly, and were labelled as the ``word" group; lastly, 36 subjects did not listen to anything and stayed in resting state throughout the experiment, and were labelled as the ``resting" group. 12 seconds of neutral music and 3 seconds of silence preceded and 15 seconds of silence followed each playback in all conditions. The data from music and silence periods were discarded from all analyses.\citep{hasson2016}
 
 \subsubsection{Description for the Forrest Dataset}
-The stimuli for this experiment is a two-hour presentation of an audio-only version of the Hollywood feature film ``Forrest Gump" made specifically for a visually impaired audience. The movie was divided into eight 15-minute sessions with breaks in-between, and presented to 20 subjects with normal hearing. During each session, brain activities centered on the auditory cortices in both brain hemisphere and the frontal and posterior portions of the brain were recorded into high resolution 7-Tesla fMRI datasets.\cite{Hanke2014}
+The stimuli for this experiment is a two-hour presentation of an audio-only version of the Hollywood feature film ``Forrest Gump" made specifically for a visually impaired audience. The movie was divided into eight 15-minute sessions with breaks in-between, and presented to 20 subjects with normal hearing. During each session, brain activities centered on the auditory cortices in both brain hemisphere and the frontal and posterior portions of the brain were recorded into high resolution 7-Tesla fMRI datasets.\citep{Hanke2014}
 
 \subsubsection{Description for the Sherlock Dataset}
-Sixteen participants (17 were described in the original paper, but 1 was removed for this dataset due to a small amount of missing data at the end of the movie scan.) were presented with a 50-minute segment of the audio-visual movie Sherlock (BBC) while undergoing fMRI scan. Before each viewing, the subjects were informed that they would later need to describe the contents of movie. Following the viewing, participants were asked to describe aloud what they recalled of the movie in as much detail as they could while undergoing brain imaging, with no visual input or experimenter guidance. Participants were allowed to speak on any aspect of the movie for as long as they wished, while their speech was recorded with an fMRI-compatible microphone. \cite{Chen2017}
+Sixteen participants (17 were described in the original paper, but 1 was removed for this dataset due to a small amount of missing data at the end of the movie scan.) were presented with a 50-minute segment of the audio-visual movie Sherlock (BBC) while undergoing fMRI scan. Before each viewing, the subjects were informed that they would later need to describe the contents of movie. Following the viewing, participants were asked to describe aloud what they recalled of the movie in as much detail as they could while undergoing brain imaging, with no visual input or experimenter guidance. Participants were allowed to speak on any aspect of the movie for as long as they wished, while their speech was recorded with an fMRI-compatible microphone. \citep{Chen2017}
 
 \subsubsection{Results}
 \begin{enumerate}
@@ -463,7 +466,7 @@ Sixteen participants (17 were described in the original paper, but 1 was removed
 \label{fig:sherlockDC1}
 \end{figure}
 
-When comparing our results with previous efforts, we can see that the decoding accuracy we achieved on the first order ISFC for the Pieman dataset using TimeCorr-based methods is significantly higher across all TimeCorr setups \cite{jeremy2017}. As higher decoding accuracy is a strong indication of the richness of stimulus-driven activities within a dataset, our improved results further confirm that TimeCorr-based methods are superior in the recovery of stimulus-driven correlation structure in fMRI datasets. Furthermore, the decoding accuracy we achieved on PCA reduced fMRI data is significantly higher than the decoding accuracy obtained from HTFA reduced datasets, indicating that PCA is more effective in preserving dynamic structure than HTFA and justifying it's usage in our level up method.
+When comparing our results with previous efforts, we can see that the decoding accuracy we achieved on the first order ISFC for the Pieman dataset using TimeCorr-based methods is significantly higher across all TimeCorr setups \citep{jeremy2017}. As higher decoding accuracy is a strong indication of the richness of stimulus-driven activities within a dataset, our improved results further confirm that TimeCorr-based methods are superior in the recovery of stimulus-driven correlation structure in fMRI datasets. Furthermore, the decoding accuracy we achieved on PCA reduced fMRI data is significantly higher than the decoding accuracy obtained from HTFA reduced datasets, indicating that PCA is more effective in preserving dynamic structure than HTFA and justifying it's usage in our level up method.
 
 Another important observation that is consistent across results from all three datasets is that the higher order ISFCs actually produced lower decoding accuracy. This result was unexpected as brain dynamics across subjects should intuitively become more similar at higher orders. One possible explanation for this is, although the high order ISFC still contain information about stimulus-driven brain activities, there seems to have been a small amount of information loss in each level up process, leading to slightly lower classification accuracy. However, although higher order ISFCs display weaker decoding capabilities than ISFCs at lower level, our hypothesis is that each order of ISFC contains distinct information about brain dynamics. If this is the case, then a mixture of all orders of ISFC will potentially have stronger decoding performance than that of ISFC at any single level.
 
@@ -618,42 +621,9 @@ To address this issue and to further improve the High-Order Brain Dynamics Model
 \item Have the number of voxels after each level up increase with each level, but at a practical rate so that the approach is still scalable to many levels. For example, the number of factors could grow linearly with respect to the level, rather than exponentially (as would happen if we didn't use any dimensionality reduction) or having the number of factors remain constant (as in our current approach).
 \end{enumerate}
 
-In conclusion, the HOBD model has provided an accurate and efficient means of examining stimulus-driven brain dynamics at high orders of functional connectivity. We believe the benefits of understanding high order brain connectivity is endless, and we are excited to explore new approaches to further improve the HOBD model and further expand the horizon of human brain decoding.
+In conclusion, the HOBD model has provided an accurate and efficient means of examining stimulus-driven brain dynamics at high orders of functional connectivity. We believe the benefits of understanding high order brain connectivity is endless, and we are excitepd to explore new approaches to further improve the HOBD model and further expand the horizon of human brain decoding.
 
 \newpage
-\begin{thebibliography}{1}
-\bibitem{jeremy2017} Jeremy Manning, Xia Zhu, Theodore Willke, Rajesh Ranganath, Kimberly Stachenfeld, Uri Hasson, David M Blei, Kenneth A Norman. A probabilistic approach to discovering dynamic full-brain functional connectivity patterns. \textit{bioRxiv} 106690, 2017
-\bibitem{elena2012} Elena A. Allen, Eswar Damaraju, Sergey M. Plis, Erik B. Erhardt, Tom Eichele and Vince D. Calhoun. Tracking Whole-Brain Connectivity Dynamics in the Resting State. \textit{Cerebral Cortex} March 2014;24:663–676
-\bibitem{enrico2011} Enrico Glerean, Juha Salmi, Juha M. Lahnakoski, Iiro P. Jaaskelainen, and Mikko Sams. Functional Magnetic Resonance Imaging Phase Synchronization as a Measure of Dynamic Functional Connectivity. \textit{BRAIN CONNECTIVITY} Volume 2, Number 2, 2012
-\bibitem{olaf2005} Olaf Sporns, Giulio Tononi, Rolf Kotter. The Human Connectome: A Structural Description of the Human Brain. \textit{PLOS Computational Biology} September 2005
-\bibitem{hasson2016} Erez Simony, Christopher J. Honey, Janice Chen, Olga Lositsky, Yaara Yeshurun, Ami Wiesel and Uri Hasson. Dynamic reconfiguration of the default mode network during narrative comprehension. \textit{nature communications} July, 2016
-\bibitem{davidson2016} Elizabeth N. Davison, Benjamin O. Turner, Kimberly J. Schlesinger, Michael B. Miller, Scott T. Grafton, Danielle S. Bassett, Jean M. Carlson. Individual Differences in Dynamic Functional Brain Connectivity Across the Human Lifespan. \textit{arXiv}:1606.09545v1
-\bibitem{tang2017} Evelyn Tang and Danielle S. Bassett. Control of Dynamics in Brain Networks. \textit{arXiv}:1701.01531v2
-\bibitem{khambhati2017} Ankit N. Khambhati, Ann E. Sizemore, Richard F. Betzel, and Danielle S. Bassett. Modelling and Interpreting Network Dynamics. \textit{bioRxiv} Apr. 4, 2017.
-\bibitem{hasson2009} Uri Hasson, Rafael Malach and David J. Heeger. Reliability of cortical activity during natural stimulation. \textit{Cell Press} December 2009
-\bibitem{hasson2005} Roy Mukamel, Hagar Gelbard, Amos Arieli, Uri Hasson, Itzhak Fried and Rafael Malach. Coupling Between Neuronal Firing, Field Potentials, and fMRI in Human Auditory Cortex. \textit{SCIENCE} VOL 309 5 AUGUST 2005
-\bibitem{hasson2004} Uri Hasson, Yuval Nir, Ifat Levy, Galit Fuhrmann and Rafael Malach. Intersubject Synchronization of Cortical Activity During Natural Vision. \textit{SCIENCE} 12 MARCH 2004 VOL 303.
-\bibitem{hasson2012} Aya Ben-Yakova, Christopher J. Honey, Yulia Lerner and Uri Hasson. Loss of reliable temporal structure in event-related averaging of naturalistic stimuli. \textit{NeuroImage} 63 (2012) 501–506
-\bibitem{zubeidi2014} Duha Al-Zubeidi, Mathula Thangarajh, PhDb, Sheel Pathak, Chunyu Cai, Bradley L. Schlaggar, Gregory A. Storch, Dorothy K. Grange and Michael E. Watson Jr.
-\bibitem{peterson9} Gregory C. Burgess, Sridhar Kandala, Dan Nolan, Timothy O. Laumann, Jonathan D. Power, Babatunde Adeyemo, Michael P. Harms, Steven E. Petersen, and Deanna M. Barch. Evaluation of Denoising Strategies to Address Motion-Correlated Artifacts in Resting-State Functional Magnetic Resonance Imaging Data from the Human Connectome Project. \textit{BRAIN CONNECTIVITY} Volume 6, Number 9, 2016
-\bibitem{peterson10} Evan M. Gordon, Timothy O. Laumann, Babatunde Adeyemo, Adrian W. Gilmore, Steven M. Nelson, Nico U.F. Dosenbach, Steven E. Petersen. Individual-specific features of brain systems identified with resting state functional correlations. \textit{NeuroImage} 146 (2017) 918–939
-\bibitem{peterson11} Timothy O. Laumann, Abraham Z. Snyder, Anish Mitra, Evan M. Gordon, Caterina Gratton, Babatunde Adeyemo, Adrian W. Gilmore, Steven M. Nelson, Jeff J. Berg5, Deanna J. Greene, John E. McCarthy, Enzo Tagliazucchi, Helmut Laufs, Bradley L. Schlaggar, Nico U. F. Dosenbach, and Steven E. Petersen. On the Stability of BOLD fMRI Correlations
-\bibitem{peterson12} Deanna J. Greene, Jessica A. Church, Nico U.F. Dosenbach, Ashley N. Nielsen, Babatunde Adeyemo, Binyam Nardos, Steven E. Petersen, Kevin J. Black and Bradley L. Schlaggar. Multivariate pattern classification of pediatric Tourette syndrome using functional connectivity MRI. \textit{Developmental Science} 19:4 (2016), pp 581–598
-\bibitem{peterson17} Christopher D. Smyser, Nico U.F. Dosenbach, TaraA. Smyser, AbrahamZ. Snyder, Cynthia E. Rogers, Terrie E. Inder, Bradley L. Schlaggar and Jeffrey J. Neil. Prediction of brain maturity in infants using machine-learning algorithms. \textit{NeuroImage} 136 (2016) 1–9
-\bibitem{peterson19} Maital Neta, XFrancis M. Miezin, Steven M. Nelson, Joseph W. Dubis, Nico U.F. Dosenbach, Bradley L. Schlaggar and Steven E. Petersen. Spatial and Temporal Characteristics of Error-Related Activity in the Human Brain. The Journal of Neuroscience, January 7, 2015
-\bibitem{peterson20} Jonathan D. Power, Bradley L. Schlaggar, and Steven E. Petersen. Recent progress and outstanding issues in motion correction in resting state fMRI. \textit{NeuroImage} 105 (2015) 536–551
-\bibitem{Logothetis01} Nikos K. Logothetis, Jon Pauls, Mark Augath, Torsten Trinath and Axel Oeltermann. Neurophysiological investigation of the basis of the fMRI signal. \textit{Nature} 412, 150-157 (12 July 2001)
-\bibitem{Greene01}Joshua D. Greene, R. Brian Sommerville, Leigh E. Nystrom, John M. Darley and Jonathan D. Cohen. An fMRI Investigation of Emotional Engagement in Moral Judgment. \textit{Science}  14 Sep 2001: Vol. 293, Issue 5537
-\bibitem{Friston99} K.J. Friston, A. Holmes, C.J. Price, C. Buchela and K.J. Worsley. Multisubject fMRI Studies and Conjunction Analyses. \textit{NeuroImage} Volume 10, Issue 4, October 1999
-\bibitem{Friston98} K.J. Friston, P. Fletcher, O. Josephs, A. Holmes, M.D. Rugg and R. Turner. Event-Related fMRI: Characterizing Differential Responses. \textit{NeuroImage} Volume 7, Issue 1, January 1998
-\bibitem{Ogawa90} S. Ogawa, T. M. Lee, A. R. Kay, and D. W. Tank. Brain magnetic resonance imaging with contrast dependent on blood oxygenation. \textit{PNAS} December 1, 1990
-\bibitem{Norman06} Kenneth A. Norman, Sean M. Polyn, Greg J. Detre and James V. Haxby. Beyond mind-reading: multi-voxel pattern analysis of fMRI data. \textit{Trends in Cognitive Science} (2006)
-\bibitem{Turke13} Nicholas B. Turk-Browne. Functional Interactions as Big Data in the Human Brain. \textit{SCIENCE} (342) November 1st, 2013.
-\bibitem{Rubinov2010} M. Rubinov and O. Sporns. Complex network measures of brain connectivity: uses and interpretations. \textit{NeuroImage}, 52:1059-1069, 2010.
-\bibitem{Betzel2017} R. E. Betzel, J. D. Medaglia, L. Papadopoulos, G. Baum, R. Gur, R. Gur, D. Roalf, T. D. Satterthwaite, and D. S. Bassett. The modular organization of human anatomical brain networks: accounting for the cost of wiring. \textit{Network Neuroscience}, page Advance online publication. doi:10.1162/netn.a.00002., 2017.
-\bibitem{Craddock2012} R. C. Craddock, G. A. James, I. P E Holtzheimer, X. P. Hu, and H. S. Mayberg. A while brain fmri atlas generated via spatially constrained spectral clustering. \textit{Human Brain Mapping}, 33(8):1914-1928, 2012.
-\bibitem{Yeo2011} B. T. T. Yeo, F. M. Krienen, J. Sepulcre, M. R. Sabuncu, D. Lashkari, M. Hollinshead, J. L. Roffman, J. W. Smoller, L. Zollei, J. R. Polimieni, B. Fischl, H. Liu, and R. L. Buckner. The organization of the human cerebral cortex estimated by intrinsic functional connectivity. \textit{Journal of Neurophsiology}, 106(3):1125-1165, 2011.
-\bibitem{Chen2017} Janice Chen,	Yuan Chang Leong,	Christopher J Honey, Chung H Yong,	Kenneth A Norman, and Uri Hasson. Shared memories reveal shared structure in neural activity across individuals. \textit{Nature Neuroscience} 20, 115–125, 2017
-\bibitem{Hanke2014} Michael Hanke, Florian J. Baumgartner, Pierre Ibe, Falko R. Kaule, Stefan Pollmann, Oliver Speck, Wolf Zinke, and Jörg Stadler. A high-resolution 7-Tesla fMRI dataset from complex natural stimulation with an audio movie. \textit{Scientific Data} Article number: 140003, 2014
-\end{thebibliography}
+\bibliographystyle{apalike}
+\bibliography{HOBD}
 \end{document}
